Przykład zmiany markdowna

--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -20,19 +20,19 @@
         <img class="about__image" src="{{ .Params.article_image}}" alt="hal" />
       </div>
       <div class="about__block">
-        <div class="about__descr-title">Kilka słów więcej</div>
         <div class="about__descr">{{.Params.short_description | safeHTML }}
+          {{.Content}}
         </div>
       </div>
     </div>
 
-    <div class="about__wrapper">
+    <!-- <div class="about__wrapper">
       <div class="about__block">
         <div class="about__descr">
           {{.Content}}
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="square square-white"></div>
 </section>
