--- a/static/css/style.css
+++ b/static/css/style.css
@@ -448,6 +448,9 @@
     text-align:left;
     font-size:20px
 }
+.about__descr img{
+    max-width:100%;
+}
 .about__descr-title{
     font-size:40px;
     font-weight:500;
