Poprawa short description i cofnięcie zmiany położenia contentu

--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -21,18 +21,17 @@
       </div>
       <div class="about__block">
         <div class="about__descr">{{.Params.short_description | safeHTML }}
-          {{.Content}}
         </div>
       </div>
     </div>
 
-    <!-- <div class="about__wrapper">
+    <div class="about__wrapper">
       <div class="about__block">
         <div class="about__descr">
           {{.Content}}
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
   <div class="square square-white"></div>
 </section>
