--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1693,7 +1693,9 @@ a:hover{
     text-decoration:none
 }
 h1,h2,h3,h4,h5,h6{
-    font-family:"Lexend",serif
+    font-family:"Lexend",serif;
+    color: black;
+    font-weight: 500;
 }
 h1{
     font-size: 2em; 
