Wstępny projekt archiwum projektów i zmiana navbara
i dodanie menu hamburgerowego na navbarze

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -74,6 +74,15 @@
                   >Kontakt</a
                 >
               </li>
+              <li class="dropdown">
+                <p class="dropdown-toggle" data-toggle="dropdown">Więcej</p>
+                  <div class="dropdown-menu">
+                    <!-- <a href="/#archive" class="navbar-link" id="recruitment-page">Rekrutacja</a> -->
+                    <a href="/#archive" class="navbar-link" id="archive-page">Archiwum</a>
+                    <!-- <a href="/#archive" class="navbar-link">coś innego</a> -->
+                  </div>
+                </a>
+              </li>
             </ul>
             <div class="mobile-nav-bars">
               <i class="fas fa-bars"></i>
