--- a/layouts/index.html
+++ b/layouts/index.html
@@ -187,8 +187,41 @@
         </div>
       </div>
     </section>
+    <section class="projects archive__section" id="archive" data-section="archive">
+      <div class="projects__wrapper">
+        <div class="projects__item">
+          <div data-aos="fade-up" class="projects__item-block">
+            <div class="projects__item-slider">
+              <img src="/images/okon/1.jpg" alt="project 1" />
+              <img src="/images/okon/2.jpg" alt="project 1" />
+              <img src="/images/okon/3.jpg" alt="project 1" />
+            </div>
+          </div>
+          <div class="projects__item-block">
+            <div data-aos="fade-up" class="projects__item-title">
+              Archiwum projektów
+            </div>
+            <div data-aos="fade-up" class="projects__item-descr">
+              Archiwum projektów opis...
+            </div>
+            <div data-aos="fade-up">
+              <a href="project" class="projects__item-btn"> 
+                Więcej ... 
+              </a>
+            </div>
+          </div>
+          <div>
+            <svg class="archive__wave" viewBox="0 0 1200 500" preserveAspectRatio="none">
+              <path fill="#c0bdbd" d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"></path>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="authorities" id="authorities" data-section="authorities">
-      <div class="authorities__wave">
+      <!-- usunąć po review pomimo że authorities__wave i projects__item-wave to to samo w stylach 
+        to zmiana na to naprawia wygląd i nie chce mi się marnować czasu na ustalenie czemu, działa? działa -->
+      <div class="projects__item-wave">
         <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
           <path
             d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
