--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@
 .navbar li{
     position:relative
 }
-.navbar a{
+.navbar a, .navbar p{
     display:-webkit-box;
     display:-ms-flexbox;
     display:flex;
@@ -70,7 +70,7 @@
     transition:0.2s;
     margin-right:10px
 }
-.navbar a:hover{
+.navbar a:hover, .navbar p:hover{
     color:#008ae6
 }
 .navbar .active{
@@ -78,6 +78,62 @@
     border-bottom:3px solid #f5f5f5;
     color:#008ae6
 }
+.dropdown {
+    position: relative;
+}
+.dropdown-toggle{
+    cursor: pointer;
+    color:#fff;
+}
+.dropdown-toggle::after {
+    content: "\25BC";
+    display: inline-block;
+    text-align: center;
+    margin-left: 5px;
+    color:#008ae6;
+}
+.dropdown:hover .dropdown-menu {
+    display: block;
+    text-align: center;
+}
+.dropdown-menu {
+    background-color: #fff;
+    outline: 2px solid #505050;
+    border-radius: 20px;
+    display: none;
+    width: auto;
+    position: absolute;
+    text-align: center;
+    z-index: 1;
+}
+.dropdown-menu a {
+    color: #333;
+    display: block;
+    padding: 15px;
+    margin-right:0px;
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+}
+.dropdown-menu .navbar-link{
+    border-top:0;
+    border-bottom:0;
+}
+@media (max-width:991px){
+    .dropdown-menu{
+        padding:5px;
+    }
+}
+@media (max-width:870px){
+    .dropdown-menu{
+        width:100%;
+        outline:0px;
+    }
+}
+.dropdown:hover .dropdown-menu {
+    display: block;
+    text-align: center;
+    }
 .navbar-mobile{
     position:fixed;
     overflow:hidden;
@@ -115,7 +171,7 @@
     -ms-flex-align:stretch;
     align-items:stretch
 }
-.navbar-mobile a{
+.navbar-mobile a, .navbar-mobile p{
     padding:10px 20px;
     font-size:18px;
     color:#222222;
@@ -124,7 +180,7 @@
     margin:0 auto;
     width:100%
 }
-.navbar-mobile a:hover{
+.navbar-mobile a:hover, .navbar-mobile p:hover{
     color:#f5f5f5
 }
 .navbar-mobile .mobile-nav-bars{
@@ -151,12 +207,15 @@
         width:65px;
         height:65px
     }
-    .navbar a{
-        padding:10px 20px;
+    .navbar a, .navbar p{
+        padding:5px 10px;
         font-size:15px
     }
+    .header .container{
+        margin: auto, 0px;
+    }
 }
-@media (max-width:767px){
+@media (max-width:870px){
     .header{
         height:90px
     }
@@ -173,7 +232,7 @@
     .navbar-mobile ul li{
         margin-bottom:35px
     }
-    .navbar-mobile ul li a:hover{
+    .navbar-mobile ul li a:hover, .navbar-mobile p:hover{
         color:black;
         opacity:0.5
     }
@@ -197,6 +256,83 @@
         margin-bottom:0
     }
 }
+
+.archive-title{
+    margin: auto;
+    text-align: center;
+    font-size: 60px;
+    padding-bottom:50px;
+    font-family: RadicalWut;
+}
+
+.archive-gallery{
+    margin-left: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.archive-item {
+    display: flex;
+    width: 400px;
+    height: 400px;
+    margin: 50px;
+    color: #212529;
+    padding: 5px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.archive-item img {
+    height: 250px;
+    width: 100%;
+    display: block;
+    outline: 2px solid #212529;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.archive-dates{
+    text-align: center;
+}
+
+.archive-header{
+    margin-top:5px;
+}
+
+.divider{
+    background-color: #c0bdbd;
+    line-height: 0;
+    padding: 0px;
+}
+.black{
+    height:70px;
+    background-color:black;
+}
+.archive-item h2 {
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+
+.archive-item p {
+    margin-top: 5px;
+}
+
+.archive-item a{
+    color:#212529;
+}
+.archive-item :hover{
+    color:#007bff;
+}
+
+@media (max-width: 700px) {
+    .archive-title{
+        font-size: 50px;
+        padding: 10px;
+    }
+}
+
 .start{
     background-color:#000;
     height:100%;
@@ -489,6 +625,10 @@
     line-height:68px;
     margin-bottom:30px
 }
+.project__dates{
+    margin-bottom: 20px;
+    text-align: right;
+}
 .project__title{
     font-family:RadicalWut;
     font-size:60px;
@@ -534,6 +674,10 @@
     .about__image{
         /* width:500px */
         transform: translate(0%, 0%);
+    }
+    .project__dates{
+        text-align: center;
+        margin-bottom: 10px;
     }
     .about__title{
         font-size:50px;
@@ -1024,6 +1168,24 @@
         display:none
     }
 }
+.archive__section{
+    padding-top: 0;
+}
+.archive__wave{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    overflow:hidden;
+    line-height:0;
+    height:300px;
+}
+.archive__wave svg {
+    position:relative;
+    display:block;
+    width:calc(100% + 1.3px);
+    height:100px;
+}
 .authorities{
     background-color:#d3d3d3;
     padding:100px 0;
@@ -1118,7 +1280,7 @@
     -webkit-transition:0.3s;
     transition:0.3s
 }
-.authorities__wave{
+/* .authorities__wave{
     position:absolute;
     top:0;
     left:0;
@@ -1133,7 +1295,7 @@
 }
 .authorities__wave svg path{
     fill:#c0bdbd
-}
+} */
 @media (max-width:1200px){
     .authorities__title{
         font-size:50px;
@@ -1420,10 +1582,12 @@
         height:50vh
     }
 }
-@media (max-width:767px){
+@media (max-width:870px){
     .project-start{
         padding-top:90px
     }
+}
+@media (max-width:767px){
     .project-start__text{
         width:100%;
         right:50%;
