Dynamiczne dodawanie zdjęć w sekcji archiwum, dodanie parametrów do MD, poprawa stylu sekcji archiwum, opis archiwum
Dodanie archive_image do markdowna, nie jest wymagane, bez niego kod działa tak jak wcześniej. Po prostu daję możliwość ustawienia innego zdjęcia jako miniaturka archiwum bo article_image może nie pasować

Dodatkowo archive_image można wykorzystać do tworzenia miniaturek projektów przy linku do archiwum na stronie głównej po wcześniejszym checku czy element nie jest wyświetlony na stronie głównej "main_site = true".
Będzie to bardziej istotne przy dynamicznym wyświetlaniu projektów w przyszłości

--- a/layouts/project/project.html
+++ b/layouts/project/project.html
@@ -14,7 +14,11 @@
     {{range .Pages}}
       <div class="archive-item" data-aos="fade-up">
         <a href="{{ .RelPermalink }}">
-          <img src="{{ .Params.article_image}}" alt="{{.Title}}">
+          {{ if .Params.archive_image }}
+            <img src="{{ .Params.archive_image }}" alt="{{ .Params.title }}" />
+          {{else}}
+            <img src="{{ .Params.article_image }}" alt="{{ .Params.title }}" />
+          {{ end }}
           <h2 data-aos="fade-up">{{.Title}}</h2>
           <div class="archive-dates">
             <p data-aos="fade-up">
