--- a/layouts/index.html
+++ b/layouts/index.html
@@ -192,9 +192,13 @@
         <div class="projects__item">
           <div data-aos="fade-up" class="projects__item-block">
             <div class="projects__item-slider">
-              <img src="/images/okon/1.jpg" alt="project 1" />
-              <img src="/images/okon/2.jpg" alt="project 1" />
-              <img src="/images/okon/3.jpg" alt="project 1" />
+              {{ range .Site.RegularPages }}
+                {{ if (eq .Params.main_site false)}}
+                  {{ if .Params.archive_image }}
+                    <img src="{{ .Params.archive_image }}" alt="{{ .Params.title }}" />
+                  {{ end }}
+                {{ end }}
+              {{ end }}
             </div>
           </div>
           <div class="projects__item-block">
@@ -202,7 +206,7 @@
               Archiwum projektów
             </div>
             <div data-aos="fade-up" class="projects__item-descr">
-              Archiwum projektów opis...
+              Jeśli jesteś ciekawy innych naszych projektów możesz zajrzeć do naszego archiwum. 
             </div>
             <div data-aos="fade-up">
               <a href="project" class="projects__item-btn"> 
@@ -211,7 +215,7 @@
             </div>
           </div>
           <div>
-            <svg class="archive__wave" viewBox="0 0 1200 500" preserveAspectRatio="none">
+            <svg class="archive__wave" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path fill="#c0bdbd" d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"></path>
             </svg>
           </div>
