--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -77,9 +77,7 @@
               <li class="dropdown">
                 <p class="dropdown-toggle" data-toggle="dropdown">Więcej</p>
                   <div class="dropdown-menu">
-                    <!-- <a href="/#archive" class="navbar-link" id="recruitment-page">Rekrutacja</a> -->
-                    <a href="/#archive" class="navbar-link" id="archive-page">Archiwum</a>
-                    <!-- <a href="/#archive" class="navbar-link">coś innego</a> -->
+                    <a href="/project" class="navbar-link" id="archive-page">Archiwum</a>
                   </div>
                 </a>
               </li>
