naprawienie przycisku przenoszącego do archiwum z sekcji archiwum

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -198,7 +198,7 @@
               Jeśli jesteś ciekawy innych naszych projektów możesz zajrzeć do naszego archiwum. 
             </div>
             <div data-aos="fade-up">
-              <a href="#archive" class="archive__item-btn"> 
+              <a href="/project" class="archive__item-btn"> 
                 Więcej ... 
               </a>
             </div>
