--- a/static/css/style.css
+++ b/static/css/style.css
@@ -628,6 +628,7 @@
 }
 .project__dates{
     margin-bottom: 20px;
+    margin-right: 0px;
     text-align: right;
 }
 .project__title{
@@ -640,12 +641,19 @@
     text-align:center;
     font-size:20px
 }
+.project__block:last-child{
+    width:100%;
+}
 .project__descr{
     text-align:left;
     font-size:20px
 }
+.project__descr p{
+    margin-bottom: 10px;
+}
 .project__descr img{
     max-width:100%;
+    margin: 20px;
 }
 .about__descr-title{
     font-size:40px;
@@ -659,7 +667,7 @@
     font-size:40px;
     font-weight:500;
     line-height:38px;
-    text-align:left;
+    text-align:center;
     color:black;
     margin-bottom:20px
 }
@@ -1481,7 +1489,7 @@
 .project-start__title{
     font-size:50px;
     font-weight:500;
-    line-height:38px;
+    line-height:60px;
     text-align:left;
     width:100%;
     color:white;
