--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -69,6 +69,14 @@
                     Wydział Mechaniczny Energetyki i Lotnictwa Politechniki
                     Warszawskiej
                   </p>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <td>Warsztat 027</td>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                      </tr>
+                    </tbody>
+                  </table>                
                 </a>
               </div>
             </div>
@@ -76,6 +84,32 @@
         </div>
       </div>
     </footer>
+    <style>
+
+      table {
+        width: 140px;
+        height: 30px;
+        margin: 200px auto;
+        border-radius: 2000px;
+        background-color: #000000;
+        border-spacing: 0;
+      }
+      td {
+        text-align: center;
+        position: relative;
+        background-color: rgb(0, 90, 255);
+        border-radius: 0px 30px 30px 0px;
+        white-space: nowrap;
+      }
+      td:first-child {
+          background-color: black;
+          border-radius: 30px 0px 0px 30px;
+          border-collapse: collapse;
+          color: white;
+      }
+  
+  
+    </style>
 
     <script src="/js/aos.js"></script>
     <script
