Allow changing name button

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -71,13 +71,13 @@
                   </p>
                 </a>
                 <a>
-                  <div class="haczyk_status">
+                  <div class="haczyk_status" id="027">
                     <div class="haczyk_left">
                       <p class="haczyk_left_text">
                         Warsztat 027
                       </p>
                     </div>
-                    <div class="haczyk_right haczyk_key_off" id="027">
+                    <div class="haczyk_right haczyk_key_off">
                     </div>   
                   </div>                
                 </a>
