Zmiana domyślnego stanu haczyka

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -77,7 +77,7 @@
                         Warsztat 027
                       </p>
                     </div>
-                    <div class="haczyk_right haczyk_key_off">
+                    <div class="haczyk_right haczyk_key_error">
                     </div>   
                   </div>                
                 </a>
