Dodanie badge'a dla boksa

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,7 +79,16 @@
                     </div>
                     <div class="haczyk_right haczyk_key_error">
                     </div>   
-                  </div>                
+                  </div>       
+                  <div class="haczyk_status" id="box">
+                    <div class="haczyk_left">
+                      <p class="haczyk_left_text">
+                        Boks B2.01
+                      </p>
+                    </div>
+                    <div class="haczyk_right haczyk_key_error">
+                    </div>   
+                  </div>            
                 </a>
               </div>
             </div>
