--- a/static/css/style.css
+++ b/static/css/style.css
@@ -719,6 +719,8 @@ div details ul {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-height: 80vh;    
+    max-width:95%;
 }
 .about__descr-title{
     font-size:40px;
