Dodano Altium do sponsorow

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -221,15 +221,15 @@
                 data-aos-delay="100"
                 class="authorities__name"
               >
-                inż. Paweł Kotiuk
+                Jan Sidor
               </div>
               <div data-aos="fade-up" data-aos-delay="200">
                 <a
-                  href="mailto:pawel.kotiuk.stud@pw.edu.pl"
+                  href="mailto:jan.sidor.stud@pw.edu.pl"
                   class="authorities__contacts-item"
                 >
                   <i class="far fa-envelope"></i>
-                  <p>pawel.kotiuk.stud@pw.edu.pl</p>
+                  <p>jan.sidor.stud@pw.edu.pl</p>
                 </a>
               </div>
             </div>
@@ -242,7 +242,7 @@
                 data-aos-delay="100"
                 class="authorities__name"
               >
-                Michał Trawczyński
+                Adam Rybojad
               </div>
             </div>
           </div>
@@ -266,6 +266,9 @@
           </a>
           <a href="https://www.st.com/content/st_com/en.html" target="_blank">
             <img src="/images/stm.png" alt="sponsors image" />
+          </a>
+	  <a href="https://www.altium.com/" target="_blank">
+            <img src="/images/thumbnail_altium_logo_blk.png" alt="sponsors image" />
           </a>
         </div>
       </div>
