dodano pruse do sponsorow

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -254,6 +254,9 @@
       <div class="container">
         <div data-aos="fade-up" class="sponsors__title">Wspierają nas</div>
         <div data-aos="fade-up" data-aos-delay="300" class="sponsors__block">
+	  <a href="https://www.prusa3d.com/" target="_blank">
+            <img src="/images/prusaresearch-logo-rgb-black.png" alt="sponsors image" />
+          </a>
           <a href="https://botland.com.pl/pl/" target="_blank">
             <img src="/images/botland.png" alt="sponsors image" />
           </a>
