dodano logo MNiSW, MELu, DPS

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -260,8 +260,8 @@
           <a href="https://botland.com.pl/pl/" target="_blank">
             <img src="/images/botland.png" alt="sponsors image" />
           </a>
-          <a href="https://www.solidworks.com/" target="_blank">
-            <img src="/images/solid.png" alt="sponsors image" />
+          <a href="https://dps-software.pl/" target="_blank">
+            <img src="/images/dps-software-logo.png" alt="sponsors image" />
           </a>
 
           <a href="http://www.addit.pl/" target="_blank">
@@ -272,6 +272,12 @@
           </a>
 	  <a href="https://www.altium.com/" target="_blank">
             <img src="/images/thumbnail_altium_logo_blk.png" alt="sponsors image" />
+          </a>
+	  <a href="https://meil.pw.edu.pl/" target="_blank">
+            <img src="/images/meil_pw_sygnet_pl_czarny_rgb.png" alt="sponsors image" />
+          </a>
+ 	  <a href="https://www.gov.pl/web/nauka" target="_blank">
+            <img src="/images/05_znak_-siatka_uproszczony_kolor_biale_tlo.png" alt="sponsors image" />
           </a>
         </div>
       </div>
