--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="about__wrapper">
           <div class="about__block" data-aos="fade-up">
-            <img class="about__image" src="static/images/knr-walne-zdjęcie-2024.png" alt="hal" />
+            <img class="about__image" src="/images/knr-walne-zdjęcie-2024.png" alt="hal" />
           </div>
         </div>
         <div class="about__block">
