--- a/layouts/index.html
+++ b/layouts/index.html
@@ -214,7 +214,7 @@
             </div>
             <div class="authorities__content-block">
               <div data-aos="fade-up" class="authorities__position">
-                Wiceprezes
+                Wiceprezes ds. Infrastruktury
               </div>
               <div
                 data-aos="fade-up"
@@ -235,14 +235,14 @@
             </div>
             <div class="authorities__content-block">
               <div data-aos="fade-up" class="authorities__position">
-                Skarbnik
+                Wiceprezes ds. Finansów
               </div>
               <div
                 data-aos="fade-up"
                 data-aos-delay="100"
                 class="authorities__name"
               >
-                Adam Rybojad
+                Olgierd Iwaniuk
               </div>
             </div>
           </div>
