--- a/layouts/index.html
+++ b/layouts/index.html
@@ -273,6 +273,9 @@
 	  <a href="https://www.altium.com/" target="_blank">
             <img src="/images/thumbnail_altium_logo_blk.png" alt="sponsors image" />
           </a>
+	  <a href="https://symkom.pl/" target="_blank">
+            <img src="/images/symkon-logo-420x280.png" alt="sponsors image" />
+          </a>
 	  <a href="https://meil.pw.edu.pl/" target="_blank">
             <img src="/images/meil_pw_sygnet_pl_czarny_rgb.png" alt="sponsors image" />
           </a>
