--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" type="text/css" href="/css/slick-theme.css" />
     <link rel="stylesheet" href="/css/aos.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/blocks/_sponsors.css" />
 
     <!-- Zdjęcia podglądów dla social mediów -->
     {{ if .Params.archive_image }}
