zmieniony adres addit

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -280,7 +280,7 @@
 
         <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
        
-          <a href="http://www.addit.pl/" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://addit.pl/pl/" target="_blank" class=" sponsor sponsor--medium">
             <img src="/images/addit.png" alt="Addit logo" />
           </a>
           <a href="https://www.st.com/content/st_com/en.html" target="_blank" class=" sponsor sponsor--medium">
