--- a/layouts/index.html
+++ b/layouts/index.html
@@ -221,17 +221,18 @@
                 data-aos-delay="100"
                 class="authorities__name"
               >
-                Jan Sidor
+                Błażej Osmałek
               </div>
               <div data-aos="fade-up" data-aos-delay="200">
                 <a
-                  href="mailto:jan.sidor.stud@pw.edu.pl"
+                  href="mailto:blazej.osmalek.stud@pw.edu.pl"
                   class="authorities__contacts-item"
                 >
                   <i class="far fa-envelope"></i>
-                  <p>jan.sidor.stud@pw.edu.pl</p>
+                  <p>blazej.osmalek.stud@pw.edu.pl</p>
                 </a>
               </div>
+            
             </div>
             <div class="authorities__content-block">
               <div data-aos="fade-up" class="authorities__position">
