--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,7 +37,7 @@
                 <i class="fab fa-instagram"></i>
               </a>
               <a
-                href="https://www.linkedin.com/company/students-robotics-association-ko%C5%82o-naukowe-robotyk%C3%B3w-knr/mycompany/"
+                href="https://www.linkedin.com/company/knr-pw/"
                 class="footer__social-item"
               >
                 <i class="fab fa-linkedin"></i>
