dodano jakies tagi

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -63,10 +63,10 @@
         // Załaduj skrypt Google Analytics
         var script = document.createElement('script');
         script.async = true;
-        script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-X';
+        script.src = 'https://www.googletagmanager.com/gtag/js?id=GTM-TW835VT8';
         document.head.appendChild(script);
         script.onload = function() {
-          gtag('config', 'UA-XXXXXXX-X');
+          gtag('config', 'GTM-TW835VT8');
         };
       }
     </script>
