--- a/layouts/index.html
+++ b/layouts/index.html
@@ -269,11 +269,9 @@
 
         </div>
         <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
-          <a href="https://www.mchtr.pw.edu.pl/" target="_blank" class="sponsor sponsor--big">
-            <img src="/images/sponsorzy/WMchtr_PW_sygnet_PL_czarny.png" alt="Wydzial Mechatroniki logo" />
+          <a href="https://www.vwfs.pl" target="_blank" class="sponsor sponsor--big">
+            <img src="/images/sponsorzy/vwfs.png" alt="VWFS logo" />
           </a>
-        
-          
           <a href="https://piap.lukasiewicz.gov.pl/" target="_blank" class="sponsor sponsor--big">
             <img src="/images/sponsorzy/lukasiewicz_PIAP_dop_pelna.png" alt="PIAP logo" />
           </a>
@@ -282,32 +280,43 @@
           <a href="https://www.prusa3d.com/" target="_blank" class="sponsor sponsor--medium">
             <img src="/images/prusaresearch-logo-rgb-black.png" alt="Prusa Research logo" />
           </a>
-         
+          
+
+          <a href="https://www.mchtr.pw.edu.pl/" target="_blank" class="sponsor sponsor--big">
+            <img src="/images/sponsorzy/WMchtr_PW_sygnet_PL_czarny.png" alt="Wydzial Mechatroniki logo" />
+          </a>
+          <a href="https://ww2.mini.pw.edu.pl/" target="_blank" class="sponsor sponsor--big">
+            <img src="/images/sponsorzy/MiNI_PW_sygnet_PL_czarny_RGB.png" alt="Wydzial MINI logo" />
+          </a>
+          
          
         </div>
         
 
         <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
           
-          <a href="https://astronika.pl/" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://astronika.pl/" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/sponsorzy/Astronika-logo-RGB.png" alt="Astronika logo" />
           </a>
-          <a href="https://pcosa.com.pl/pl" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://pcosa.com.pl/pl" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/sponsorzy/PCO-logo-RGB.png" alt="PCO logo" />
           </a>
-          <a href="https://addit.pl/pl/" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://addit.pl/pl/" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/addit.png" alt="Addit logo" />
           </a>
-          <a href="https://www.maxongroup.com/en" target="_blank" class=" sponsor sponsor--medium">
-            <img src="/images/Maxon_logo.png" alt="Addit logo" />
+          <a href="https://www.maxongroup.com/en" target="_blank" class=" sponsor sponsor--small">
+            <img src="/images/Maxon_logo.png" alt="maxon logo" />
+          </a>
+          <a href="https://www.elka.pw.edu.pl/" target="_blank" class="sponsor sponsor--medium">
+            <img src="/images/sponsorzy/WEiTI_PW_sygnet_PL_czarny.png" alt="Wydzial WEITI logo" />
           </a>
         </div>
         <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
        
-          <a href="https://www.st.com/content/st_com/en.html" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://www.st.com/content/st_com/en.html" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/stm.png" alt="ST Microelectronics logo" />
           </a>
-          <a href="https://dps-software.pl/" target="_blank" class=" sponsor sponsor--medium">
+          <a href="https://dps-software.pl/" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/dps-software-logo.png" alt="DPS Software logo" />
           </a>
         </div>
