--- a/layouts/index.html
+++ b/layouts/index.html
@@ -260,7 +260,7 @@
           
           <div class="sponsor_row">
           <a href="https://meil.pw.edu.pl/" target="_blank" class="sponsor sponsor--main">
-            <img src="/images/meil_pw_sygnet_pl_czarny_rgb.png" alt="Wydział MEiL PW logo" />
+            <img src="/images/sponsorzy/mel.png" alt="Wydział MEiL PW logo" />
           </a>
           
           <a href="https://www.gov.pl/web/nauka" target="_blank" class="sponsor sponsor--main">
@@ -268,23 +268,28 @@
           </a>
 
         </div>
-        <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
+        <div class="sponsor_row" data-aos="fade-up" data-aos-delay="150" >
           <a href="https://www.vwfs.pl" target="_blank" class="sponsor sponsor--big">
             <img src="/images/sponsorzy/vwfs.png" alt="VWFS logo" />
+          </a>
+          <a href="http://fedex.com/" target="_blank" class="sponsor sponsor--big">
+            <img src="/images/sponsorzy/collective_eng_2c_pos_rgb.png" alt="FedEx logo" />
           </a>
           <a href="https://piap.lukasiewicz.gov.pl/" target="_blank" class="sponsor sponsor--big">
             <img src="/images/sponsorzy/lukasiewicz_PIAP_dop_pelna.png" alt="PIAP logo" />
           </a>
          
         
-          <a href="https://www.prusa3d.com/" target="_blank" class="sponsor sponsor--medium">
-            <img src="/images/prusaresearch-logo-rgb-black.png" alt="Prusa Research logo" />
+          <a href="https://www.prusa3d.com/" target="_blank" class="sponsor sponsor--big">
+            <img src="/images/sponsorzy/prusa.png" alt="Prusa Research logo" />
           </a>
-          
+            </div>
 
+          <div class="sponsor_row" data-aos="fade-up" data-aos-delay="150" >
           <a href="https://www.mchtr.pw.edu.pl/" target="_blank" class="sponsor sponsor--big">
             <img src="/images/sponsorzy/WMchtr_PW_sygnet_PL_czarny.png" alt="Wydzial Mechatroniki logo" />
           </a>
+
           <a href="https://ww2.mini.pw.edu.pl/" target="_blank" class="sponsor sponsor--big">
             <img src="/images/sponsorzy/MiNI_PW_sygnet_PL_czarny_RGB.png" alt="Wydzial MINI logo" />
           </a>
@@ -293,7 +298,7 @@
         </div>
         
 
-        <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300" >
+        <div class="sponsor_row" data-aos="fade-up" data-aos-delay="150" >
           
           <a href="https://astronika.pl/" target="_blank" class=" sponsor sponsor--small">
             <img src="/images/sponsorzy/Astronika-logo-RGB.png" alt="Astronika logo" />
