--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,26 +31,14 @@
     <div class="square"></div>
     <div class="square square-left"></div>
   </section>
-
-  <div class="about__wave">
-    <svg viewBox="0 0 1200 50" preserveAspectRatio="none">
-      <path
-        d="M 618.37947,0.00228347 C 576.25375,0.07641047 534.11198,1.9523286 492.82439,5.4913632 434.85439,10.457017 378.56667,18.643892 320.4363,23.211612 A 601.56141,254.08767 0 0 1 -4.6875e-6,11.122422 V 50 H 1200 V 40.020603 C 1132.2904,49.617891 1056.0593,46.401518 986.20183,38.617368 907.0343,29.799413 823.95649,12.442445 743.83683,5.3262825 702.61439,1.6560149 660.50519,-0.07180467 618.37947,0.00228347 Z">
-      </path>
-    </svg>
-  </div>
 </section>
 
+<section class="section__transition">
+</section>
 
 <section class="about" id="about" data-section="about">
-  <div class="about__wave_down">
-    <svg viewBox="0 0 1200 80" preserveAspectRatio="none">
-      <path
-        d="M 7.4999998e-6,6.715441e-7 V 80 C 140.17125,60.247848 249.82243,3.6814572 686.71096,39.654297 747.32104,44.644851 1023.4708,79.450284 1200,75.743685 V 6.715441e-7 Z">
-      </path>
-    </svg>
-  </div>
   <div class="container">
+    
     <div class="about__wrapper">
       <div class="about__block aos-init aos-animate" data-aos="fade-up">
         <img class="about__image" src="/images/knr-walne-zdjecie-2024.png" alt="hal" />
