--- a/static/css/style.css
+++ b/static/css/style.css
@@ -411,7 +411,8 @@ div details ul {
     -ms-flex-align:center;
     align-items:center;
     overflow:hidden;
-    position:relative
+    position:relative;
+    z-index: 1;
 }
 .start__block{
     width:45%;
@@ -597,7 +598,7 @@ div details ul {
 }
 .about{
     padding:100px 0;
-    padding-top:150px;
+    padding-top:250px;
     position:relative;
     overflow:hidden
 }
@@ -745,27 +746,36 @@ div details ul {
     margin-bottom:20px
 }
 .about__wave{
-  position: absolute;
-  bottom: -10px; 
+    position: relative;
+   top: 0%;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: auto;
-  pointer-events: none;
+  display: block;
+  z-index: 4; 
+  pointer-events: none; 
   
 }
-.about__wave_down {
-  position: absolute;
-  top: 0;
-  left: 0;
+.section__transition {
+  height: 130px; 
+  margin-top: -100px; 
+  margin-bottom: 0px;
+  position: relative;
+  z-index: 10;
   width: 100%;
-  height: auto;
-  line-height: 0;
-  z-index: 1;
-  pointer-events: none;
-    
+  background: url('/images/vector/wave.svg') no-repeat center bottom;
+  background-size: 100% 130px; /* szerokość na 100% + wysokość zgodna z wysokością sekcji */
 }
-.about__wave_down svg {
+
+.about__wave__down {
+  position: absolute;
+   top: -10%;
+  left: 0;
+  width: 100vw;
+  height: auto;
   display: block;
+  z-index: 3; 
+  pointer-events: none; 
 }
 @media (max-width:1200px){
     .about__image{
