--- a/layouts/index.html
+++ b/layouts/index.html
@@ -303,7 +303,7 @@
           <img src="/images/sponsorzy/Astronika-logo-RGB.png" alt="Astronika logo" />
         </a>
         <a href="https://fundacjappl.pl/" target="_blank" class=" sponsor sponsor--medium">
-          <img src="/images/sponsorzy/ppl.png" alt="PPL logo" />
+          <img src="/images/sponsorzy/PPL.png" alt="PPL logo" />
         </a>
         <a href="https://pcosa.com.pl/pl" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/sponsorzy/PCO-logo-RGB.png" alt="PCO logo" />
